# SW-Design-CTD-HW

./: .gitignore
lab1/: LRUCache.hs  LRUCacheTest.hs
lab2/: LICENSE  lab2.cabal  stack.yaml
lab2/src/: Lib.hs
lab2/test/: MockTests.hs
lab3/: pom.xml
lab3/src/main/java/ru/akirakozov/sd/refactoring/: Main.java
lab3/src/main/java/ru/akirakozov/sd/refactoring/servlet/: AddProductServlet.java  DBHandler.java  GetProductsServlet.java  QueryServlet.java  ServletCommon.java
lab4/: client_session_key.aes  lab4.cabal  shell.nix  stack.yaml
lab4/app/: Main.hs
lab4/src/: Controller.hs  Model.hs
lab5/: lab5.cabal  shell.nix  stack.yaml
lab5/app/: Main.hs
lab5/src/: DiagramsApi.hs  DrawingApi.hs  GlossApi.hs  GraphLib.hs
lab6/: lab6.cabal  shell.nix  stack.yaml
lab6/app/: Main.hs
lab7/: pom.xml
lab7/src/main/java/ru/ifmo/belyy/: ContextConfiguration.java  Main.java
lab7/src/main/java/ru/ifmo/belyy/aspect/: ProfileAspect.java
lab7/src/main/java/ru/ifmo/belyy/test/: GoldenSection.java  SteepestDescent.java
lab8/: build.sbt
lab8/src/main/scala/: Bing.scala  Google.scala  SearchAggregator.scala  SearchQuery.scala  StubEngine.scala  Supervisor.scala  Yandex.scala
lab8/stub_responses/: bing.json  google.json  yandex.json
lab9/: pom.xml
lab9/src/main/java/ru/itmo/belyy/react/: AlreadyExistsException.java  Exchanger.java  ReactCatalog.java
lab9/src/main/java/ru/itmo/belyy/react/controller/: ProductController.java  RegisterController.java
lab9/src/main/java/ru/itmo/belyy/react/model/: Product.java  User.java
lab9/src/main/java/ru/itmo/belyy/react/model/repository/: ProductRepository.java  UserRepository.java
lab9/src/main/resources/: application.properties
