name:                lab2
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/AVBelyy/lab2#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Belyy
maintainer:          anton.belyy@gmail.com
copyright:           2016 Anton Belyy
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , MonadRandom
                     , aeson
                     , bytestring
                     , containers
                     , data-default-class
                     , time
                     , text
                     , authenticate-oauth
                     , twitter-conduit
                     , twitter-types
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             UnitTests.hs
  build-depends:       base
                     , lab2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite mock-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MockTests.hs
  build-depends:       base
                     , lab2
                     , QuickCheck
                     , random
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AVBelyy/lab2
