name:                lab4
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lab4#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
                       Controller
  build-depends:       base >= 4.7 && < 5
                     , text
                     , yesod
                     , persistent
                     , persistent-template
                     , persistent-sqlite
  default-language:    Haskell2010

executable todo-list
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lab4
                     , yesod
                     , persistent-sqlite
                     , monad-logger
                     , resourcet
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lab4
