name:                lab5
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/lab5#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24

library
  hs-source-dirs:      src
  exposed-modules:     DrawingApi
                     , GlossApi
                     , DiagramsApi
                     , GraphLib
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , diagrams-lib
                     , diagrams-gtk
                     , diagrams-cairo
                     , gtk
                     , colour
                     , data-default
                     , mtl
  default-language:    Haskell2010

executable lab5-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lab5
                     , data-default
                     , mtl
  default-language:    Haskell2010
